Fix quotation marks in German dpkg translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -55,10 +55,11 @@ dpkg (1.15.3) UNRELEASED; urgency=low
   * Warn about unused substvars in dpkg-gencontrol. Closes: #532760
 
   [ Updated dpkg translations ]
-  * Simplified Chinese (Deng Xiyue). Closes: #531387
   * Catalan (Jordi Mallach). Closes: #532109
-  * Swedish (Peter Krefting).
   * Czech (Miroslav Kure).
+  * German (Sven Joachim). Closes: #534831
+  * Simplified Chinese (Deng Xiyue). Closes: #531387
+  * Swedish (Peter Krefting).
 
   [ Updated dselect translations ]
   * Czech (Miroslav Kure).
