--- a/po/de.po
+++ b/po/de.po
@@ -8,10 +8,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Debian dpkg 1.15.1\n"
+"Project-Id-Version: Debian dpkg 1.15.2\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-05-26 01:10+0200\n"
-"PO-Revision-Date: 2009-05-22 09:28+0200\n"
+"PO-Revision-Date: 2009-06-27 16:31+0200\n"
 "Last-Translator: Sven Joachim <svenjoac@gmx.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2108,7 +2108,7 @@ msgstr ""
 #: src/enquiry.c:393
 #, c-format
 msgid "obsolete option '--%s', please use '--%s' instead."
-msgstr "veraltete Option »--%s, bitte verwenden Sie »--%s« stattdessen.«"
+msgstr "veraltete Option »--%s«, bitte verwenden Sie »--%s« stattdessen."
 
 #: src/enquiry.c:434
 msgid ""
