--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+dpkg (1.15.4) UNRELEASED; urgency=low
+
+
+ -- Guillem Jover <guillem@debian.org>  Sat, 27 Jun 2009 19:25:30 +0200
+
 dpkg (1.15.3) unstable; urgency=low
 
   [ Guillem Jover ]
