Fix wildcard support in symbol files
They were broken due to typo. Also add a test for wildcards.

Signed-off-by: Modestas Vainius <modestas@vainius.eu>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.15.3.1) UNRELEASED; urgency=low
 
-  *
+  [ Modestas Vainius ]
+  * Fix wildcard support in symbol files. Closes: #536034
 
  -- Guillem Jover <guillem@debian.org>  Wed, 08 Jul 2009 11:09:59 +0200
 
