dpkg-name: Call _g instead of g_

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 dpkg (1.15.4) UNRELEASED; urgency=low
 
+  * Call _g instead of g_ in dpkg-name.
 
  -- Guillem Jover <guillem@debian.org>  Sat, 27 Jun 2009 19:25:30 +0200
 
