--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 dpkg (1.15.4) UNRELEASED; urgency=low
 
   * Call _g instead of g_ in dpkg-name.
+  * Fix inverted logic when deciding to assume the architecture in dpkg-name
+    when the package didn't have such field.
 
  -- Guillem Jover <guillem@debian.org>  Sat, 27 Jun 2009 19:25:30 +0200
 
