French translation update

--- a/po/fr.po
+++ b/po/fr.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-06-27 19:08+0200\n"
-"PO-Revision-Date: 2009-05-22 08:55+0200\n"
+"PO-Revision-Date: 2009-06-29 18:51+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -313,8 +313,7 @@ msgstr "champ « %s » non autorisé dans le fichier d'états"
 #: lib/fields.c:105
 #, c-format
 msgid "too many values in file details field `%s' (compared to others)"
-msgstr ""
-"trop de valeurs dans le champ du fichier « %s » (par rapport aux autres)"
+msgstr "trop de valeurs dans le champ du fichier « %s » (par rapport aux autres)"
 
 #: lib/fields.c:119
 #, c-format
@@ -382,8 +381,7 @@ msgstr "répertoire racine ou nul déclaré comme un « conffile »"
 
 #: lib/fields.c:350
 #, c-format
-msgid ""
-"`%s' field, missing package name, or garbage where package name expected"
+msgid "`%s' field, missing package name, or garbage where package name expected"
 msgstr ""
 "champ « %s », nom de paquet manquant, ou absurdités à la place d'un nom de "
 "paquet"
@@ -727,8 +725,7 @@ msgstr "le nom de champ « %.*s » doit être suivi de deux points (:)"
 #: lib/parse.c:178
 #, c-format
 msgid "EOF before value of field `%.*s' (missing final newline)"
-msgstr ""
-"EOF avant la valeur du champ « %.*s » (il manque le saut de ligne final)"
+msgstr "EOF avant la valeur du champ « %.*s » (il manque le saut de ligne final)"
 
 #: lib/parse.c:182
 #, c-format
@@ -994,8 +991,7 @@ msgstr ""
 #: lib/trigdeferred.l:195
 #, c-format
 msgid "unable to close new triggers deferred file `%.250s'"
-msgstr ""
-"impossible de fermer le nouveau fichier des actions différées « %.255s »"
+msgstr "impossible de fermer le nouveau fichier des actions différées « %.255s »"
 
 #: lib/trigdeferred.l:199
 #, c-format
@@ -1056,11 +1052,10 @@ msgstr ""
 "impossible d'enregistrer un nouveau fichier des actions différées demandées "
 "« %.250s »"
 
-#: lib/triglib.c:413
-#, fuzzy, c-format
+#: lib/triglib.c:413, c-format
 msgid "unable to close new trigger interest file `%.250s'"
 msgstr ""
-"impossible de créer un nouveau fichier des actions différées demandées "
+"impossible de fermer le nouveau fichier des actions différées demandées "
 "« %.250s »"
 
 #: lib/triglib.c:417
@@ -1089,10 +1084,9 @@ msgid "unable to write new file triggers file `%.250s'"
 msgstr ""
 "impossible d'enregistrer le nouveau fichier des actions différées « %.250s »"
 
-#: lib/triglib.c:510
-#, fuzzy, c-format
+#: lib/triglib.c:510, c-format
 msgid "unable to close new file triggers file `%.250s'"
-msgstr "impossible de créer un nouveau fichier d'actions différées « %.250s »"
+msgstr "impossible de fermer le nouveau fichier d'actions différées « %.250s »"
 
 #: lib/triglib.c:514
 #, c-format
@@ -1186,8 +1180,7 @@ msgstr "erreur de lecture du tube de dpkg-deb"
 #: src/archives.c:255
 #, c-format
 msgid "skipped unpacking file '%.255s' (replaced or excluded?)"
-msgstr ""
-"omission de la décompression du fichier « %.255s » (remplacé ou exclu ?)"
+msgstr "omission de la décompression du fichier « %.255s » (remplacé ou exclu ?)"
 
 #: src/archives.c:296
 #, c-format
@@ -1416,8 +1409,7 @@ msgstr "l'installation de %.250s"
 #, c-format
 msgid ""
 "dpkg: considering deconfiguration of %s, which would be broken by %s ...\n"
-msgstr ""
-"dpkg : tentative de déconfiguration de %s, qui serait cassé par %s ...\n"
+msgstr "dpkg : tentative de déconfiguration de %s, qui serait cassé par %s ...\n"
 
 #: src/archives.c:945
 #, c-format
@@ -1469,20 +1461,19 @@ msgstr ""
 "dpkg : la suppression de %s peut être problématique, puisqu'il fournit%"
 "s ...\n"
 
-#: src/archives.c:1046
-#, fuzzy, c-format
+#: src/archives.c:1046, c-format
 msgid ""
 "dpkg: package %s requires reinstallation, but will remove anyway as you "
 "requested.\n"
 msgstr ""
-"dpkg : le paquet %s requiert une réinstallation, mais suppression comme "
+"dpkg : le paquet %s requiert une réinstallation mais sera supprimé quand même, "
+"comme "
 "demandé.\n"
 
 #: src/archives.c:1049
 #, c-format
 msgid "dpkg: package %s requires reinstallation, will not remove.\n"
-msgstr ""
-"dpkg : le paquet %s requiert une réinstallation, suppression annulée.\n"
+msgstr "dpkg : le paquet %s requiert une réinstallation, suppression annulée.\n"
 
 #: src/archives.c:1056
 #, c-format
@@ -1699,8 +1690,7 @@ msgstr "%s :échec de la liaison de « %.250s » à « %.250s » : %s"
 #: src/configure.c:288
 #, c-format
 msgid "Installing new version of config file %s ...\n"
-msgstr ""
-"Installation de la nouvelle version du fichier de configuration %s ...\n"
+msgstr "Installation de la nouvelle version du fichier de configuration %s ...\n"
 
 #: src/configure.c:294
 #, c-format
@@ -2207,8 +2197,7 @@ msgstr ""
 #: src/enquiry.c:365
 #, c-format
 msgid "cannot satisfy pre-dependencies for %.250s (wanted due to %.250s)"
-msgstr ""
-"ne peut satisfaire les pré-dépendances pour %.250s (réclamé par %.250s)"
+msgstr "ne peut satisfaire les pré-dépendances pour %.250s (réclamé par %.250s)"
 
 #: src/enquiry.c:393
 #, c-format
@@ -2216,8 +2205,7 @@ msgid "obsolete option '--%s', please use '--%s' instead."
 msgstr "option obsolète « --%s », veuillez utiliser « --%s » à la place."
 
 #: src/enquiry.c:434
-msgid ""
-"--compare-versions takes three arguments: <version> <relation> <version>"
+msgid "--compare-versions takes three arguments: <version> <relation> <version>"
 msgstr ""
 "--compare-versions prend trois paramètres : <version> <relation> <version>"
 
@@ -2240,8 +2228,7 @@ msgstr ""
 " %s\n"
 
 #: src/errors.c:68
-msgid ""
-"dpkg: failed to allocate memory for new entry in list of failed packages."
+msgid "dpkg: failed to allocate memory for new entry in list of failed packages."
 msgstr ""
 "dpkg : impossible d'allouer de la mémoire pour une nouvelle entrée dans la "
 "liste des paquets en échec."
@@ -2268,8 +2255,7 @@ msgstr ""
 
 #: src/errors.c:103
 #, c-format
-msgid ""
-"Package %s is on hold, not touching it.  Use --force-hold to override.\n"
+msgid "Package %s is on hold, not touching it.  Use --force-hold to override.\n"
 msgstr ""
 "Le paquet %s est à garder (on hold), et laissé tel quel. Utilisez --force-"
 "hold pour passer outre.\n"
@@ -3183,8 +3169,7 @@ msgstr "Enregistrement de l'information sur %s de %s.\n"
 #: src/processarc.c:220
 #, c-format
 msgid "package architecture (%s) does not match system (%s)"
-msgstr ""
-"l'architecture du paquet (%s) ne correspond pas à celle du système (%s)"
+msgstr "l'architecture du paquet (%s) ne correspond pas à celle du système (%s)"
 
 #: src/processarc.c:275
 #, c-format
@@ -3423,8 +3408,7 @@ msgstr "détournement localement en : %s\n"
 
 #: src/query.c:232
 msgid "--search needs at least one file name pattern argument"
-msgstr ""
-"--search a besoin d'au moins un motif de nom de fichier comme paramètre"
+msgstr "--search a besoin d'au moins un motif de nom de fichier comme paramètre"
 
 #: src/query.c:273
 #, c-format
@@ -3479,8 +3463,7 @@ msgstr ""
 #: src/query.c:441
 #, c-format
 msgid "Debian `%s' package management program query tool\n"
-msgstr ""
-"Outil « %s » d'interrogation du programme de gestion de paquets Debian\n"
+msgstr "Outil « %s » d'interrogation du programme de gestion de paquets Debian\n"
 
 #: src/query.c:457
 #, c-format
@@ -3871,8 +3854,7 @@ msgstr "« --check-supported » ne prend pas de paramètre"
 
 #: src/trigcmd.c:208
 msgid "takes one argument, the trigger name"
-msgstr ""
-"a besoin d'un seul paramètre , le nom de l'action différée (« trigger »)"
+msgstr "a besoin d'un seul paramètre , le nom de l'action différée (« trigger »)"
 
 #: src/trigcmd.c:213
 msgid ""
@@ -4166,8 +4148,7 @@ msgstr "impossible d'exécuter « find »"
 
 #: dpkg-deb/build.c:471 dpkg-deb/build.c:478
 msgid "failed to write filename to tar pipe (data)"
-msgstr ""
-"l'écriture d'un nom de fichier à travers un tube tar (« data ») a échoué"
+msgstr "l'écriture d'un nom de fichier à travers un tube tar (« data ») a échoué"
 
 #: dpkg-deb/build.c:482
 msgid "<compress> from tar -cf"
@@ -4634,8 +4615,7 @@ msgstr "le fichier « %.250s » est corrompu - %.250s manquant"
 #: dpkg-split/info.c:71
 #, c-format
 msgid "file `%.250s' is corrupt - missing newline after %.250s"
-msgstr ""
-"le fichier « %.250s » est corrompu - saut de ligne après %.250s manquant"
+msgstr "le fichier « %.250s » est corrompu - saut de ligne après %.250s manquant"
 
 #: dpkg-split/info.c:95
 msgid "unable to seek back"
@@ -4927,11 +4907,10 @@ msgstr "fin de fichier inattendue dans %.250s"
 msgid "part size is far too large or is not positive"
 msgstr "taille de partie beaucoup trop grande ou négative"
 
-#: dpkg-split/main.c:125
-#, fuzzy, c-format
+#: dpkg-split/main.c:125, c-format
 msgid "part size must be at least %d KiB (to allow for header)"
 msgstr ""
-"la taille de partie doit être d'au moins %dk (pour autoriser les en-têtes)"
+"la taille de partie doit être d'au moins %d ko (pour autoriser les en-têtes)"
 
 #: dpkg-split/queue.c:74
 #, c-format
