--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
 dpkg (1.15.4) UNRELEASED; urgency=low
 
+  [ Guillem Jover ]
   * Call _g instead of g_ in dpkg-name.
   * Fix inverted logic when deciding to assume the architecture in dpkg-name
     when the package didn't have such field.
   * Do not take into account Revision and Package_Revision fields in dpkg-name
     as they have been handled already by “dpkg-deb -I”.
+
+  [ Updated dpkg translations ]
+  * French (Christian Perrier).
 
  -- Guillem Jover <guillem@debian.org>  Sat, 27 Jun 2009 19:25:30 +0200
 
