--- a/man/po/de.po
+++ b/man/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2009-06-27 18:48+0300\n"
-"PO-Revision-Date: 2009-06-20 09:43+0200\n"
+"PO-Revision-Date: 2009-06-30 21:30+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -145,7 +145,7 @@ msgid ""
 "The format described here is used since Debian 0.93; details of the old "
 "format are described in B<deb-old>(5)."
 msgstr ""
-"Da hier beschriebene Format wird seit Debian 0.93 verwendet; Details über "
+"Das hier beschriebene Format wird seit Debian 0.93 verwendet; Details über "
 "das alte Format sind in B<deb-old>(5) beschrieben."
 
 #. type: SH
@@ -220,7 +220,7 @@ msgid ""
 "`B<.>', the current directory."
 msgstr ""
 "Das zweite erforderliche Mitglied heißt B<control.tar.gz>. Es ist ein "
-"gezipptes Tar-Archiv, dass die Steuerinformationen als eine Reihe von "
+"gezipptes Tar-Archiv, das die Steuerinformationen als eine Reihe von "
 "normalen Dateien enthält, von denen die Datei B<control> zwingend "
 "erforderlich ist und die Kern-Steuerinformationen enthält. Der Steuer-"
 "Tarball kann optional einen Eintrag für »B<.>«, das aktuelle Verzeichnis, "
@@ -335,7 +335,7 @@ msgstr ""
 "Kleinschreibung egal), gefolgt von einem Doppelpunkt und dem Körper des "
 "Feldes. Felder werden nur durch die Feldmarkierungen abgegrenzt. Mit anderen "
 "Worten, Feldtexte können mehrere Zeilen überspannen, aber die "
-"Installationswerkzeuge werden im allgemeinen die Zeilen bei der Verarbeitung "
+"Installationswerkzeuge werden im Allgemeinen die Zeilen bei der Verarbeitung "
 "des Feldkörpers zusammenfassen (mit Ausnahme des B<Description>-Feldes, "
 "sehen Sie dazu unten)."
 
@@ -418,7 +418,7 @@ msgid ""
 msgstr ""
 "Das Format der Paketbeschreibung ist eine kurze knappe Zusammenfassung auf "
 "der ersten Zeile (nach dem »Description«-Feld). Die folgenden Zeilen sollten "
-"als längere, detailliertere Beschreibung verwendet werden. Jede  Zeile der "
+"als längere, detailliertere Beschreibung verwendet werden. Jede Zeile der "
 "Langbeschreibung muss von einem Leerzeichen begonnen werden, und Leerzeilen "
 "in der Langbeschreibung müssen einen einzelnen ».« hinter dem einleitenden "
 "Leerzeichen enthalten."
@@ -643,9 +643,9 @@ msgid ""
 "installations. The package maintenance software will warn the user if they "
 "install a package without those listed in its B<Recommends> field."
 msgstr ""
-"Liste an Paketen die in allen, abgesehen von ungewöhnlichen, Installationen "
+"Liste an Paketen, die in allen, abgesehen von ungewöhnlichen, Installationen "
 "zusammen angefunden würden. Die Paketverwaltungssoftware wird den Benutzer "
-"warnen falls er ein Paket ohne die im B<Recommends>-Feld aufgeführten Pakete "
+"warnen, falls er ein Paket ohne die im B<Recommends>-Feld aufgeführten Pakete "
 "installiert."
 
 #. type: TP
@@ -694,7 +694,7 @@ msgid ""
 msgstr ""
 "Eine Versionsnummer kann mit »E<gt>E<gt>« beginnen, in diesem Falle passen "
 "alle neueren Versionen, und kann die Debian-Paketrevision (getrennt durch "
-"einen Bindestrich) enthalten oder entfallen lassen. Akzeptierte "
+"einen Bindestrich) enthalten oder auch nicht. Akzeptierte "
 "Versionsbeziehungen sind »E<gt>E<gt>« für größer als, »E<lt>E<lt>« für kleiner "
 "als, »E<gt>=« für größer als oder identisch zu, »E<lt>=« für kleiner als oder "
 "identisch zu und »=« für identisch zu."
@@ -735,7 +735,7 @@ msgid ""
 "packages should each include a B<Conflicts> line mentioning the other."
 msgstr ""
 "Liste an Paketen, die mit diesem in Konflikt stehen, beispielsweise indem "
-"beide Dateien mit dem gleichen Namen enthalten. Die Paketverwaltungssoftware "
+"beide Dateien den gleichen Namen enthalten. Die Paketverwaltungssoftware "
 "wird es nicht erlauben, Pakete, die in Konflikt stehen, gleichzeitig zu "
 "installieren. Zwei in Konflikt stehende Pakete sollten jeweils eine "
 "B<Conflicts>-Zeile enthalten, die das andere Paket erwähnen."
@@ -4660,7 +4660,7 @@ msgid ""
 "below).  Especially the --print-architecture option is unreliable since we "
 "have Debian architectures which don't equal a processor name."
 msgstr ""
-"Im allgemeinen wird der Aufruf von Dpkg in der »rules«-Datei, um Architektur-"
+"Im Allgemeinen wird der Aufruf von Dpkg in der »rules«-Datei, um Architektur-"
 "Informationen zu erhalten, abgelehnt (falls Sie Rückwärtskompatibilität "
 "bereitstellen wollen, siehe unten). Insbesondere die --print-architecture-"
 "Option ist unzuverlässig, da wir Debian-Architekturen haben, die nicht mit "
@@ -7533,7 +7533,7 @@ msgid ""
 msgstr ""
 "Einige Pakete folgen nicht der Namensstruktur "
 "E<lt>PaketE<gt>_E<lt>VersionE<gt>_E<lt>ArchitekturE<gt>.deb. Pakete, die von "
-"dpkg-name umbenannt wurden, folgen dieser Struktur. Im allgemeinen hat diese "
+"dpkg-name umbenannt wurden, folgen dieser Struktur. Im Allgemeinen hat diese "
 "keinen Einfluss darauf, wie Pakete von B<dselect>(1)/B<dpkg>(1) installiert "
 "werden, aber andere Installationswerkzeuge können von dieser "
 "Benennungsstruktur abhängen."
@@ -8411,7 +8411,7 @@ msgid ""
 "contain the path from the top of the Debian archive hierarchy."
 msgstr ""
 "Der I<Pfad-Präfix> wird, falls angegeben, vor das Directory-Feld in dem "
-"erzeugten Quell-Index vorangestellt. Sie verwenden dies im allgemeinen, "
+"erzeugten Quell-Index vorangestellt. Sie verwenden dies im Allgemeinen, "
 "damit das Directory-Feld den Pfad von der Spitze der Debian-Hierarchie "
 "enthält."
 
@@ -13738,7 +13738,7 @@ msgid ""
 msgstr ""
 "B<start-stop-daemon> liefert 0, falls die angeforderte Aktion ausgeführt "
 "wurde oder B<--oknodo> angegeben und entweder B<--start> angegeben wurde und "
-"ein passener Prozess lief bereits oder B<--stop> angebeben wurde und es gab "
+"ein passender Prozess lief bereits oder B<--stop> angebeben wurde und es gab "
 "keinen passenden Prozess. Falls B<--oknodo> nicht angegeben wurde und nichts "
 "erfolgte, wird 1 zurückgeliefert. Falls B<--stop> und B<--retry> angegeben "
 "wurden, aber das Ende des Plans errreicht wurde und der Prozess noch läuft, "
