Update german translation of manual pages
Update to 1662t0u2f.

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,9 @@ dpkg (1.15.4) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * French (Christian Perrier).
 
+  [ Updated man page translations ]
+  * German (Helge Kreutzmann), proofreading by Jens Seidel.
+
  -- Guillem Jover <guillem@debian.org>  Sat, 27 Jun 2009 19:25:30 +0200
 
 dpkg (1.15.3) unstable; urgency=low
