dpkg-scansources: Switch to use Dpkg::Cdata
Use our modules instead of duplicating the .dsc parsing code. As a
side effect it now handles properly bogus files.

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ dpkg (1.15.4) UNRELEASED; urgency=low
     when the package didn't have such field.
   * Do not take into account Revision and Package_Revision fields in dpkg-name
     as they have been handled already by “dpkg-deb -I”.
+  * Switch dpkg-scansources to use Dpkg::Cdata instead of duplicating the
+    .dsc parsing code. As a side effect it now handles properly bogus files.
 
   [ Updated dpkg translations ]
   * French (Christian Perrier).
