dpkg-scanpackages: Do not remap obsolete fields
Those fields have been remappedd already by “dpkg-deb -I”.

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ dpkg (1.15.4) UNRELEASED; urgency=low
     as they have been handled already by “dpkg-deb -I”.
   * Switch dpkg-scansources to use Dpkg::Cdata instead of duplicating the
     .dsc parsing code. As a side effect it now handles properly bogus files.
+  * Do not remap obsolete fields in dpkg-scanpackages as they have been
+    handled already by “dpkg-deb -I”.
 
   [ Updated dpkg translations ]
   * French (Christian Perrier).
