dpkg-scanpackages: Do not handle the Revision field
This field has already been parsed and handled by “dpkg-deb -I”.
The code is doubly useless, as additionally the version comparison is
done before the Revision has been folded into the Version field.

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,7 +5,7 @@ dpkg (1.15.4) UNRELEASED; urgency=low
   * Fix inverted logic when deciding to assume the architecture in dpkg-name
     when the package didn't have such field.
   * Do not take into account Revision and Package_Revision fields in dpkg-name
-    as they have been handled already by “dpkg-deb -I”.
+    and dpkg-scanpackages as they have been handled already by “dpkg-deb -I”.
   * Switch dpkg-scansources to use Dpkg::Cdata instead of duplicating the
     .dsc parsing code. As a side effect it now handles properly bogus files.
   * Do not remap obsolete fields in dpkg-scanpackages as they have been
