Asturian translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ dpkg (1.15.4) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
   * French (Christian Perrier).
+  * Asturian (Marcos Alvarez Costales). Closes: #535327
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann), proofreading by Jens Seidel.
