--- a/po/ast.po
+++ b/po/ast.po
@@ -9,8 +9,9 @@ msgstr ""
 "Project-Id-Version: Debian dpkg 1.14.22\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-06-27 19:08+0200\n"
-"PO-Revision-Date: 2009-05-22 08:01+0100\n"
-"Last-Translator: Marcos <marcos.alvarez.costales@gmail.com>\n"
+"PO-Revision-Date: 2009-07-01 18:01+0100\n"
+"Last-Translator: Marcos Alvarez Costales <marcos.alvarez.costales@gmail."
+"com>\n"
 "Language-Team: Asturian <softast-xeneral@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1034,9 +1035,9 @@ msgstr ""
 "nun puede escribise un nuevu ficheru d'intereses de disparadores `%.250s'"
 
 #: lib/triglib.c:413
-#, fuzzy, c-format
+#, c-format
 msgid "unable to close new trigger interest file `%.250s'"
-msgstr "nun puede crease un nuevu ficheru d'intereses de disparadores `%.250s'"
+msgstr "nun puede zarrase'l nuevu disparador del ficheru `%.250s'"
 
 #: lib/triglib.c:417
 #, c-format
@@ -1063,9 +1064,9 @@ msgid "unable to write new file triggers file `%.250s'"
 msgstr "nun pudo escribise'l nuevu ficheru de disparadores `%.250s'"
 
 #: lib/triglib.c:510
-#, fuzzy, c-format
+#, c-format
 msgid "unable to close new file triggers file `%.250s'"
-msgstr "nun pudo criase'l nuevu ficheru de disparadores `%.250s'"
+msgstr "nun pudo zarrase'l nuevu ficheru de disparadores `%.250s'"
 
 #: lib/triglib.c:514
 #, c-format
@@ -1425,12 +1426,13 @@ msgid "dpkg: may have trouble removing %s, as it provides %s ...\n"
 msgstr "dpkg: quitar %s pue dar problemes, porque ufre %s ...\n"
 
 #: src/archives.c:1046
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: package %s requires reinstallation, but will remove anyway as you "
 "requested.\n"
 msgstr ""
-"dpkg: el paquete %s requier reinstalación, pero va quitase como se pidió.\n"
+"dpkg: el paquete %s requier reinstalación, pero va desaniciase de toes "
+"maneres, como tu pidiste.\n"
 
 #: src/archives.c:1049
 #, c-format
@@ -3647,9 +3649,8 @@ msgid "unexpected end of line in statoverride file"
 msgstr "fin de llinia inesperáu en ficheru statoverride"
 
 #: src/statdb.c:208
-#, fuzzy
 msgid "unexecpted end of line in statoverride file"
-msgstr "fin de llinia inesperáu en ficheru statoverride"
+msgstr "final de llinia inesperáu en ficheru statoverride"
 
 #: src/statdb.c:212
 #, c-format
@@ -4762,10 +4763,10 @@ msgid "part size is far too large or is not positive"
 msgstr "el tamañu de la parte ye abondo grande o nun ye positivu"
 
 #: dpkg-split/main.c:125
-#, fuzzy, c-format
+#, c-format
 msgid "part size must be at least %d KiB (to allow for header)"
 msgstr ""
-"el tamañu de la parte tien de ser polo menos %dk (p'almitir una testera)"
+"el tamañu de la parte tien de ser polo menos %d KiB (p'almitir una testera)"
 
 #: dpkg-split/queue.c:74
 #, c-format
