dpkg-statoverride: Rewrite in C

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,7 @@ dpkg (1.15.5) UNRELEASED; urgency=low
   * Add C coding style document.
   * Make dpkg as strict as dpkg-statoverride on input when validating the
     parsed data from the statdb.
+  * Rewrite dpkg-statoverride in C.
 
   [ Raphaël Hertzog ]
   * Add versioned dependency on base-files (>= 5.0.0) to dpkg-dev to ensure
