--- a/TODO
+++ b/TODO
@@ -23,6 +23,7 @@ squeeze + 1
 
  * Remove compatibility symlinks
    /usr/sbin/{update-alternatives,dpkg-divert,dpkg-statoverride}.
+ * Remove install-info wrapper.
 
 1.14.x
 ------
