Fix dpkg's preinst when alternatives dir contains unexpected subdirs
Adjust the lintian overrides accordingly.

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,8 @@ dpkg (1.15.4) UNRELEASED; urgency=low
     info-browsers that do not depend on the new install-info package
     that provides the real functionality. Closes: #9771, #523980
     See http://wiki.debian.org/Transitions/DpkgToGnuInstallInfo for details.
+  * Fix dpkg's preinst in case /var/lib/dpkg/alternatives contains unexpected
+    sub-directories. Closes: #535138
 
   [ Updated dpkg translations ]
   * French (Christian Perrier).
