Update Standards-Version to 3.8.2

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,7 @@ dpkg (1.15.4) UNRELEASED; urgency=low
     See http://wiki.debian.org/Transitions/DpkgToGnuInstallInfo for details.
   * Fix dpkg's preinst in case /var/lib/dpkg/alternatives contains unexpected
     sub-directories. Closes: #535138
+  * Upgrade Standards-Version to 3.8.2 (no changes).
 
   [ Updated dpkg translations ]
   * French (Christian Perrier).
