German dpkg translation update
Update to 1005t8f.

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,8 +22,9 @@ dpkg (1.15.4) UNRELEASED; urgency=low
   * Upgrade Standards-Version to 3.8.2 (no changes).
 
   [ Updated dpkg translations ]
-  * French (Christian Perrier).
   * Asturian (Marcos Alvarez Costales). Closes: #535327
+  * French (Christian Perrier).
+  * German (Sven Joachim).
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann), proofreading by Jens Seidel.
