--- a/scripts/po/de.po
+++ b/scripts/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg scripts\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-06-27 19:08+0200\n"
-"PO-Revision-Date: 2009-06-21 21:47+0200\n"
+"PO-Revision-Date: 2009-07-04 15:23+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2235,7 +2235,7 @@ msgstr "Syntaxfehler in %s auf Zeile %d: %s"
 #: scripts/Dpkg/Fields.pm:42
 #, perl-format
 msgid "unknown information field '%s' in input data in %s"
-msgstr "unbekanntes Informationsfeld »%s« in den Eingabedateien in %s"
+msgstr "unbekanntes Informationsfeld »%s« in den Eingabedaten in %s"
 
 #: scripts/Dpkg/Fields.pm:261
 msgid "write error on control data"
