--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,9 @@ dpkg (1.15.4) UNRELEASED; urgency=low
   [ Updated man page translations ]
   * German (Helge Kreutzmann), proofreading by Jens Seidel.
 
+  [ Updated scripts translations ]
+  * German (Helge Kreutzmann).
+
  -- Guillem Jover <guillem@debian.org>  Sat, 27 Jun 2009 19:25:30 +0200
 
 dpkg (1.15.3) unstable; urgency=low
