--- a/man/po/de.po
+++ b/man/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2009-06-27 18:48+0300\n"
-"PO-Revision-Date: 2009-06-30 21:44+0200\n"
+"PO-Revision-Date: 2009-07-06 18:19+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -10781,19 +10781,18 @@ msgstr ""
 
 #. type: TP
 #: ../../man/dpkg-split.1:143
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-S>, B<--partsize> I<kibibytes>"
-msgstr "B<-S>, B<--partsize> I<kBytes>"
+msgstr "B<-S>, B<--partsize> I<kibibytes>"
 
 #. type: Plain text
 #: ../../man/dpkg-split.1:147
-#, fuzzy
 msgid ""
 "Specifies the maximum part size when splitting, in kibibytes (1024 bytes). "
 "The default is 450 KiB."
 msgstr ""
-"Gibt die maximale Teilgröße in kilobytes (1024 bytes) beim Aufteilen an. "
-"Standardmäßig ist dies 450 KiB."
+"Gibt die maximale Teilgröße in kibibytes (1024 bytes) beim Aufteilen an. "
+"Standardmäßig ist dies 450 kiB."
 
 #. type: TP
 #: ../../man/dpkg-split.1:147
