--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.15.3.1) UNRELEASED; urgency=low
+
+  *
+
+ -- Guillem Jover <guillem@debian.org>  Wed, 08 Jul 2009 11:09:59 +0200
+
 dpkg (1.15.3) unstable; urgency=low
 
   [ Guillem Jover ]
