Fix poor wording in German dpkg translation

--- a/po/de.po
+++ b/po/de.po
@@ -596,7 +596,7 @@ msgstr "fehlgeschlagen in buffer_copy (%s)"
 #: lib/mlib.c:317
 #, c-format
 msgid "short read in buffer_copy (%s)"
-msgstr "nicht ganz gelesen in buffer_copy (%s)"
+msgstr "nicht vollständig gelesen in buffer_copy (%s)"
 
 #: lib/myopt.c:57
 #, c-format
