Italian translation updated

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,7 @@ dpkg (1.15.4) UNRELEASED; urgency=low
   * Asturian (Marcos Alvarez Costales). Closes: #535327
   * French (Christian Perrier).
   * German (Sven Joachim).
+  * Italian (Milo Casagrande). Closes: #536538
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann), proofreading by Jens Seidel.
