Obsolete --forget-old-unavail
On parse mark not-installed leftover packages for automatic removal from
the database on next dump. The states we consider for removal are
want_purge, want_deinstall and want_hold. The latter being the ancient
default for not-installed packages.

This makes the --forget-old-unavail option not useful anymore, so switch
it to be a no-op, and target it for future removal as obsolescent.

Closes: #33394, #429262

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,9 @@ dpkg (1.15.4) UNRELEASED; urgency=low
   * Properly mark packages being purged for disappearance from the database.
     This will make the status database not be left behind with traces of old
     not-installed packages.
+  * On parse mark not-installed leftover packages for automatic removal from
+    the database on next dump. This obsoletes the --forget-old-unavail option,
+    thus making it now a no-op. Closes: #33394, #429262
 
   [ Raphael Hertzog ]
   * Replace install-info by a wrapper around GNU's install-info. The wrapper
