Add fakeroot to dpkg-dev Recommends
Since version 1.14.7, dpkg-buildpackage uses fakeroot by default to
obtain (emulated) root privileges.

Reported-by: Sven Joachim <svenjoac@gmx.de>
Closes: #536821

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,7 @@ dpkg (1.15.4) UNRELEASED; urgency=low
   * Remove trailing ‘/’ and ‘/.’ from the directory name to be used as the
     package name on “dpkg-deb -b”. Closes: #218018, #373602
   * Remove obsolete ‘hold’ and ‘hold-reinstreq’ internal status flags.
+  * Add fakeroot to dpkg-dev Recommends. Closes: #536821
 
   [ Raphael Hertzog ]
   * Replace install-info by a wrapper around GNU's install-info. The wrapper
