--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,8 @@ dpkg (1.15.4) UNRELEASED; urgency=low
     package name on “dpkg-deb -b”. Closes: #218018, #373602
   * Remove obsolete ‘hold’ and ‘hold-reinstreq’ internal status flags.
   * Add fakeroot to dpkg-dev Recommends. Closes: #536821
+  * Fix an always false test when trying to decide which package to deselect
+    to resolve a dependency problem in dselect.
 
   [ Raphael Hertzog ]
   * Replace install-info by a wrapper around GNU's install-info. The wrapper
