Slovak translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -47,6 +47,9 @@ dpkg (1.15.4) UNRELEASED; urgency=low
   * German (Sven Joachim).
   * Italian (Milo Casagrande). Closes: #536538
 
+  [ Updated dselect translations ]
+  * Slovak (Ivan Masár). Closes: #537741
+
   [ Updated man page translations ]
   * German (Helge Kreutzmann), proofreading by Jens Seidel.
 
