Slovak translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -46,6 +46,7 @@ dpkg (1.15.4) UNRELEASED; urgency=low
   * French (Christian Perrier).
   * German (Sven Joachim).
   * Italian (Milo Casagrande). Closes: #536538
+  * Slovak (Ivan Masár). Closes: #537742
 
   [ Updated dselect translations ]
   * Slovak (Ivan Masár). Closes: #537741
