--- a/po/sk.po
+++ b/po/sk.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-06-27 19:08+0200\n"
-"PO-Revision-Date: 2009-04-08 16:08+0100\n"
+"PO-Revision-Date: 2009-07-20 17:38+0100\n"
 "Last-Translator: Ivan Masár <helix84@centrum.sk>\n"
 "Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
 "MIME-Version: 1.0\n"
@@ -1012,9 +1012,9 @@ msgid "unable to write new trigger interest file `%.250s'"
 msgstr "nepodarilo sa zapísať nový súbor záujmu spúšťača „%.250s“"
 
 #: lib/triglib.c:413
-#, fuzzy, c-format
+#, c-format
 msgid "unable to close new trigger interest file `%.250s'"
-msgstr "nepodarilo sa vytvoriť nový súbor záujmu spúšťača „%.250s“"
+msgstr "nepodarilo sa zatvoriť nový súbor záujmu spúšťača „%.250s“"
 
 #: lib/triglib.c:417
 #, c-format
@@ -1039,9 +1039,9 @@ msgid "unable to write new file triggers file `%.250s'"
 msgstr "nepodarilo sa zapísať nový súbor spúšťača súboru „%.250s“"
 
 #: lib/triglib.c:510
-#, fuzzy, c-format
+#, c-format
 msgid "unable to close new file triggers file `%.250s'"
-msgstr "nepodarilo sa vytvoriť nový súbor spúšťača súboru „%.250s“"
+msgstr "nepodarilo sa zatvoriť nový súbor spúšťača súboru „%.250s“"
 
 #: lib/triglib.c:514
 #, c-format
@@ -1399,13 +1399,13 @@ msgid "dpkg: may have trouble removing %s, as it provides %s ...\n"
 msgstr "dpkg: možné problémy s odstránením %s, pretože poskytuje %s ...\n"
 
 #: src/archives.c:1046
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: package %s requires reinstallation, but will remove anyway as you "
 "requested.\n"
 msgstr ""
-"dpkg: balík %s vyžaduje reinštaláciu, bude ale odstránený podľa vašej "
-"požiadavky.\n"
+"dpkg: balík %s vyžaduje reinštaláciu, ale bude odstránený ako ste "
+"požadovali.\n"
 
 #: src/archives.c:1049
 #, c-format
@@ -2130,9 +2130,9 @@ msgstr ""
 "nie je možné vyriešiť pred-závislosti pre %.250s (vyžadované pre %.250s)"
 
 #: src/enquiry.c:393
-#, fuzzy, c-format
+#, c-format
 msgid "obsolete option '--%s', please use '--%s' instead."
-msgstr "zastaralá voľba „--%s“\n"
+msgstr "zastaralá voľba „--%s“, prosím použite namiesto nej „--%s“."
 
 #: src/enquiry.c:434
 msgid ""
@@ -4689,9 +4689,9 @@ msgid "part size is far too large or is not positive"
 msgstr "veľkosť časti je buď príliš veľká alebo negatívna"
 
 #: dpkg-split/main.c:125
-#, fuzzy, c-format
+#, c-format
 msgid "part size must be at least %d KiB (to allow for header)"
-msgstr "veľkosť časti musí byť aspoň %dk (kvôli hlavičke)"
+msgstr "veľkosť časti musí byť aspoň %d KiB (kvôli hlavičke)"
 
 #: dpkg-split/queue.c:74
 #, c-format
