Updated French translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -53,6 +53,7 @@ dpkg (1.15.4) UNRELEASED; urgency=low
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann), proofreading by Jens Seidel.
+  * French completed by Christian Perrier.
 
   [ Updated scripts translations ]
   * German (Helge Kreutzmann).
