Completed French translation for scripts

--- a/debian/changelog
+++ b/debian/changelog
@@ -53,10 +53,11 @@ dpkg (1.15.4) UNRELEASED; urgency=low
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann), proofreading by Jens Seidel.
-  * French completed by Christian Perrier.
+  * French completed (Christian Perrier).
 
   [ Updated scripts translations ]
   * German (Helge Kreutzmann).
+  * French completed (Christian Perrier).
 
  -- Guillem Jover <guillem@debian.org>  Sat, 27 Jun 2009 19:25:30 +0200
 
