man: Fix typo in French translation breaking the build
Introduced in commit f96f650bffaeb949a96107fcb188f9927be42171.

--- a/man/po/fr.po
+++ b/man/po/fr.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2009-07-21 18:52+0300\n"
-"PO-Revision-Date: 2009-07-21 19:01+0200\n"
+"PO-Revision-Date: 2009-07-22 18:04+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -13858,7 +13858,7 @@ msgid ""
 "automatic mode. This option is only relevant with B<--config> or B<--all>."
 msgstr ""
 "Passe l'invite de configuration pour les alternatives qui sont correctement "
-"configurées en mode automatique. Cette option n'est pertinente qu'avec <--"
+"configurées en mode automatique. Cette option n'est pertinente qu'avec B<--"
 "config> ou B<--all>."
 
 #. type: TP
