--- a/man/po/de.po
+++ b/man/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2009-07-21 18:52+0300\n"
-"PO-Revision-Date: 2009-07-19 09:37+0200\n"
+"PO-Revision-Date: 2009-07-30 18:37+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -9420,10 +9420,10 @@ msgid ""
 "be accepted."
 msgstr ""
 "Baue ein Quellpaket. Das erste nicht-Options-Argument wird als Name des "
-"Verzeichnises verwandt, das den debianisierten (d.h. mit einem "
+"Verzeichnisses verwandt, das den debianisierten (d.h. mit einem "
 "Unterverzeichnis debian und ggf. Änderungen an den Originaldateien "
-"versehenen) Quellbaum enthält. Abhängig des zum Bau verwandten "
-"Quellpaketformats könnten zusätzliche Parameter akzeptiert werden."
+"versehenen) Quellbaum enthält. Abhängig vom dem zum Bau verwandten "
+"Quellpaketformat könnten zusätzliche Parameter akzeptiert werden."
 
 #. type: Plain text
 #: ../../man2/dpkg-source.1:64
