Add uClibc Linux support to ostable and triplettable
Closes: #455501

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,7 @@ dpkg (1.15.4) UNRELEASED; urgency=low
   * Add fakeroot to dpkg-dev Recommends. Closes: #536821
   * Fix an always false test when trying to decide which package to deselect
     to resolve a dependency problem in dselect.
+  * Add uClibc Linux support to ostable and triplettable. Closes: #455501
 
   [ Raphael Hertzog ]
   * Replace install-info by a wrapper around GNU's install-info. The wrapper
