Add uClinux support to ostable and triplettable

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ dpkg (1.15.4) UNRELEASED; urgency=low
   * Fix an always false test when trying to decide which package to deselect
     to resolve a dependency problem in dselect.
   * Add uClibc Linux support to ostable and triplettable. Closes: #455501
+  * Add uClinux support to ostable and triplettable.
+    Thanks to Simon Richter <sjr@debian.org>.
 
   [ Raphael Hertzog ]
   * Replace install-info by a wrapper around GNU's install-info. The wrapper
