Update Swedish translation.
po/sv.po: Updated to 971t0f0u.
man/po/sv.po: Update to 1608t0f0u.
scripts/po/sv.po: Update to 476t0f0u.

--- a/debian/changelog
+++ b/debian/changelog
@@ -54,6 +54,7 @@ dpkg (1.15.4) UNRELEASED; urgency=low
   * German (Sven Joachim).
   * Italian (Milo Casagrande). Closes: #536538
   * Slovak (Ivan Masár). Closes: #537742
+  * Swedish (Peter Krefting).
 
   [ Updated dselect translations ]
   * Slovak (Ivan Masár). Closes: #537741
@@ -61,10 +62,12 @@ dpkg (1.15.4) UNRELEASED; urgency=low
   [ Updated man page translations ]
   * German (Helge Kreutzmann), proofreading by Jens Seidel.
   * French completed (Christian Perrier).
+  * Swedish (Peter Krefting).
 
   [ Updated scripts translations ]
   * German (Helge Kreutzmann).
   * French completed (Christian Perrier).
+  * Swedish (Peter Krefting).
 
  -- Guillem Jover <guillem@debian.org>  Sat, 27 Jun 2009 19:25:30 +0200
 
