--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-07-21 18:52+0300\n"
-"PO-Revision-Date: 2009-06-18 21:37+0100\n"
+"PO-Revision-Date: 2009-08-03 20:22+0100\n"
 "Last-Translator: Peter Krefting <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1526,6 +1526,10 @@ msgid ""
 "yet occur. That's why you can't use variables in the B<Package>, B<Source> "
 "and B<Architecture> fields."
 msgstr ""
+"Medan variabelsubstituering görs på alla fält i styrfilen är det "
+"några av fälten som används och behövs vid byggning innan "
+"substitueringen ännu har utförts. Därför går det inte att använda "
+"variabler i fälten B<Package>, B<Source> och B<Architecture>."
 
 #. type: Plain text
 #: ../../man2/deb-substvars.5:51
@@ -2691,6 +2695,8 @@ msgid ""
 "Now B<obsolete> and a no-op as B<dpkg> will automatically forget uninstalled "
 "unavailable packages."
 msgstr ""
+"En numera B<föråldrad> flagga som inte utför någonting, då B<dpkg> "
+"automatiskt glömmer ej installerade och ej tillgängliga paket."
 
 #. type: TP
 #: ../../man2/dpkg.1:208
@@ -5236,7 +5242,6 @@ msgstr "B<-j>I<jobb>"
 
 #. type: Plain text
 #: ../../man2/dpkg-buildpackage.1:127
-#, fuzzy
 msgid ""
 "Number of jobs allowed to be run simultaneously, equivalent to the B<make>"
 "(1)  option of the same name. Will add itself to the MAKEFLAGS environment "
@@ -5252,9 +5257,7 @@ msgstr ""
 "B<parallel=>I<jobb> till miljövariabeln DEB_BUILD_OPTIONS, vilket gör det "
 "möjligt för debian/rules-filer att använda informationen för egna ändamål. "
 "Värdet B<parallel=>I<jobb> i miljövariabeln DEB_BUILD_OPTIONS kommer att "
-"överstyra värdet för B<-j> om den flaggan ges. B<-D> Kontrollera "
-"byggberoenden och -konflikter; avbryt om de inte uppfylls. Detta är "
-"standardbeteendet."
+"överstyra värdet för B<-j> om den flaggan ges."
 
 #. type: TP
 #: ../../man2/dpkg-buildpackage.1:127
@@ -5264,13 +5267,13 @@ msgstr "B<-D>"
 
 #. type: Plain text
 #: ../../man2/dpkg-buildpackage.1:131
-#, fuzzy
 msgid ""
 "Check build dependencies and conflicts; abort if unsatisfied. This is the "
 "default behavior."
 msgstr ""
-"Byggberoenden och -konflikter kontrolleras att de uppfylls (såvida inte B<-"
-"d> anges)."
+"Kontrollera  byggberoenden och -konflikter; avbryt om de inte uppfylls. "
+"Detta är standardbeteendet."
+""
 
 #. type: TP
 #: ../../man2/dpkg-buildpackage.1:131
@@ -10507,18 +10510,17 @@ msgstr ""
 
 #. type: TP
 #: ../../man2/dpkg-split.1:143
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-S>, B<--partsize> I<kibibytes>"
-msgstr "B<-S>, B<--partsize> I<kbyte>"
+msgstr "B<-S>, B<--partsize> I<kibibyte>"
 
 #. type: Plain text
 #: ../../man2/dpkg-split.1:147
-#, fuzzy
 msgid ""
 "Specifies the maximum part size when splitting, in kibibytes (1024 bytes). "
 "The default is 450 KiB."
 msgstr ""
-"Anger maximal storlek vid delning, i kilobyte (1024 byte). Förval är 450 KiB."
+"Anger maximal storlek vid delning, i kibibyte (1024 byte). Förval är 450 KiB."
 
 #. type: TP
 #: ../../man2/dpkg-split.1:147
@@ -10705,9 +10707,9 @@ msgstr "dpkg-statoverride"
 
 #. type: TH
 #: ../../man2/dpkg-statoverride.8:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2009-06-26"
-msgstr "2009-02-27"
+msgstr "2009-06-26"
 
 #. type: TH
 #: ../../man2/dpkg-statoverride.8:1
@@ -10761,7 +10763,6 @@ msgstr "B<--add>I< användare grupp läge fil>"
 
 #. type: Plain text
 #: ../../man2/dpkg-statoverride.8:33
-#, fuzzy
 msgid ""
 "Add an override for I<file>. I<file> does not need to exist when this "
 "command is used; the override will be stored and used later.  Users and "
@@ -10769,29 +10770,28 @@ msgid ""
 "by their number by prepending the number with a `B<#>' (for example B<#0> or "
 "B<#65534>). The I<mode> needs to be specified in octal."
 msgstr ""
-"Lägg till en överstyrning för B<fil>. B<Fil> behöver inte existera när "
+"Lägg till en överstyrning för I<fil>. )<Fil> behöver inte existera när "
 "kommandot körs; överstyrningen kommer lagras och användas senare. Användare "
 "och grupper kan anges med namn (till exempel B<root> eller B<nobody>), eller "
-"med deras nummer med ett \"B<#>\" (till exempel B<#0> eller B<#65534>)."
+"med deras nummer med ett \"B<#>\" (till exempel B<#0> eller B<#65534>). "
+"I<Läge> måste anges oktalt."
 
 #. type: Plain text
 #: ../../man2/dpkg-statoverride.8:36
-#, fuzzy
 msgid ""
 "If --update is specified and I<file> exists, it is immediately set to the "
 "new owner and mode."
 msgstr ""
-"Om --update anges och B<fil> existerar kommer den omedelbart att sättas till "
+"Om --update anges och I<fil> existerar kommer den omedelbart att sättas till "
 "den nya användaren och läget."
 
 #. type: Plain text
 #: ../../man2/dpkg-statoverride.8:40
-#, fuzzy
 msgid ""
 "Remove an override for I<file>, the status of I<file> is left unchanged by "
 "this command."
 msgstr ""
-"Ta bort en överstyrning för B<fil>, status för B<fil> ändras inte av detta "
+"Ta bort en överstyrning för I<fil>, status för I<fil> ändras inte av detta "
 "kommando."
 
 #. type: TP
@@ -10814,12 +10814,11 @@ msgstr ""
 
 #. type: Plain text
 #: ../../man2/dpkg-statoverride.8:57
-#, fuzzy
 msgid ""
 "Change the I<directory> of the dpkg database where the statoverride file is "
 "also stored. Defaults to I</var/lib/dpkg>."
 msgstr ""
-"Ändra katalog för dpkg-databasen där statoverride-filen också lagras. Förval "
+"Ändra I<katalog> för dpkg-databasen där statoverride-filen också lagras. Förval "
 "är I</var/lib/dpkg>."
 
 #. type: TP
