--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-07-21 18:52+0300\n"
-"PO-Revision-Date: 2009-08-03 20:22+0100\n"
+"PO-Revision-Date: 2009-08-07 13:49+0200\n"
 "Last-Translator: Peter Krefting <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -10770,7 +10770,7 @@ msgid ""
 "by their number by prepending the number with a `B<#>' (for example B<#0> or "
 "B<#65534>). The I<mode> needs to be specified in octal."
 msgstr ""
-"Lägg till en överstyrning för I<fil>. )<Fil> behöver inte existera när "
+"Lägg till en överstyrning för I<fil>. I<Fil> behöver inte existera när "
 "kommandot körs; överstyrningen kommer lagras och användas senare. Användare "
 "och grupper kan anges med namn (till exempel B<root> eller B<nobody>), eller "
 "med deras nummer med ett \"B<#>\" (till exempel B<#0> eller B<#65534>). "
