dpkg-gensymbols(1): add kfreebsd-amd64 to the "64bit arches" symbol example
This makes it less likely that this arch will be forgotten when
maintainers copy/paste from the example.

--- a/debian/changelog
+++ b/debian/changelog
@@ -50,6 +50,8 @@ dpkg (1.15.4) UNRELEASED; urgency=low
     be installed due to a conflicting file instead of quoting the master link.
   * Add support for extra override file in dpkg-scanpackages. Thanks to Robert
     Millan for the patch. Closes: #537559
+  * Update sample in dpkg-gensymbols(1) to give an accurate listing of
+    64 bit arches. Thanks to Julien Cristau for the patch. Closes: #540382
 
   [ Modestas Vainius ]
   * Provide a meaningful label for dpkg-gensymbols diff.
