--- a/man/dpkg-gensymbols.1
+++ b/man/dpkg-gensymbols.1
@@ -144,10 +144,10 @@ in template mode.
 The format of \fIarchitecture list\fR is the same as the one used in the
 \fIBuild-Depends\fR field of \fIdebian/control\fR (except the enclosing
 square brackets []). For example, the first symbol from the list below
-will be considered only on alpha, amd64 and ia64 architectures while the
-second one anywhere except on armel.
+will be considered only on alpha, amd64, kfreebsd-amd64 and ia64 architectures
+while the second one anywhere except on armel.
 
- (arch=alpha amd64 ia64)a_64bit_specific_symbol@Base 1.0
+ (arch=alpha amd64 kfreebsd-amd64 ia64)a_64bit_specific_symbol@Base 1.0
  (arch=!armel)symbol_armel_does_not_have@Base 1.0
 .TP
 .B ignore\-blacklist
