dpkg: On file conflicts print the version of the conflicted package
Makes it easier to report bugs, without needed to additionally check
the installed version of the conflicted package.

Closes: #540019

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,8 @@ dpkg (1.15.4) UNRELEASED; urgency=low
   * Add uClibc Linux support to ostable and triplettable. Closes: #455501
   * Add uClinux support to ostable and triplettable.
     Thanks to Simon Richter <sjr@debian.org>.
+  * When aborting due to file conflicts print the version of the conflicted
+    package. Closes: #540019
 
   [ Raphael Hertzog ]
   * Replace install-info by a wrapper around GNU's install-info. The wrapper
