--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,7 @@ dpkg (1.15.5) UNRELEASED; urgency=low
     Thanks to Robert Millan.
   * Update the FSF postal address in the source code license headers by
     replacing it with a URL to the gnu.org page.
+  * Add a new status-fd action when disappearing a package. Closes: #537338
 
   [ Raphaël Hertzog ]
   * Add versioned dependency on base-files (>= 5.0.0) to dpkg-dev to ensure
