Add forgotten bug closure
Closes: #472208

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,7 +12,7 @@ dpkg (1.15.4) UNRELEASED; urgency=low
     handled already by “dpkg-deb -I”.
   * Properly mark packages being purged for disappearance from the database.
     This will make the status database not be left behind with traces of old
-    not-installed packages.
+    not-installed packages. Closes: #472208
   * On parse mark not-installed leftover packages for automatic removal from
     the database on next dump. This obsoletes the --forget-old-unavail option,
     thus making it now a no-op. Closes: #33394, #429262
